# lntools

./: .gitignore  .pylintrc  README.md  pyproject.toml  reinstall.bat  reinstall.sh  setup.py
.github/: copilot-instructions.md
lntools/: __init__.py
lntools/bot/: __init__.py  notify.py
lntools/config/: __init__.py  api.py
lntools/core/: __init__.py  cli.py  filesystem.py  log.py
lntools/format/: __init__.py  human.py
lntools/mail/: __init__.py  mailplus.py
lntools/timeutils/: __init__.py  api.py
lntools/types/: __init__.py  typing.py
lntools/utils/: __init__.py  cli.py  columns.py  decorator.py  directory.py  file.py  filesystem.py  human.py  log.py  misc.py  typing.py
tests/: test.py
